commit before reinstall system, may be something wrong